# weekeyboard

./: .gitignore  AUTHORS  Makefile.am  configure.ac
data/: Makefile.am
data/symbols/: wkb
data/themes/: Makefile.am
data/themes/default/: default.edc  ignorekeys.txt
protocol/: Makefile.am  input-method.xml  text.xml
src/: Makefile.am  wkb-ibus-config-eet-test.c  wkb-ibus-config-eet.c  wkb-ibus-config-eet.h  wkb-ibus-config-key.c  wkb-ibus-config-key.h  wkb-ibus-config.c  wkb-ibus-config.h  wkb-ibus-defs.h  wkb-ibus-helper.c  wkb-ibus-helper.h  wkb-ibus-panel.c  wkb-ibus-test.c  wkb-ibus.c  wkb-ibus.h  wkb-log.h  wkb-main.c
